--- a/info.html
+++ b/info.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <link rel="shortcut icon" href="images/icon.ico"/>
-<link rel="bookmark" href="images/icon.ico"/>
+    <link rel="shortcut icon" href="images/icon.ico"/>
+    <link rel="bookmark" href="images/icon.ico"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,19 +23,19 @@
 
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 
-    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.css'>
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
+   <!-- <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.css'>-->
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
     <!--box-->
-     <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/hot-sneaks/jquery-ui.css" rel="stylesheet">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+    <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/hot-sneaks/jquery-ui.css" rel="stylesheet">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
      <!-- end-->
-      <link rel="stylesheet" href="css/block_style.css">
-      <link href="css/top.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="css/block_style.css">
+    <link href="css/top.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="https://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
@@ -45,17 +45,114 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-	 <script type='text/javascript' 
-            src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>   
+    <script type='text/javascript' src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>   
     <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-        <style>
+    <style>
         body,input { font-size: 9pt; font-family:Microsoft JhengHei;padding-top: 100px;}		
         html { height: 100% }  
 		a {color:#FFFFFF}
 		a:hover {color:#2dcc71}
         body { height: 100%; margin: 0px; } 
-		#down { padding-top: 10px; } 
+        #down { padding-top: 10px; padding-right: 27%; padding-left: 27%;}
+            @media (max-width: 1500px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 25.5%;
+                    padding-left: 25.5%;
+                }
+            }
+            @media (max-width: 1400px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 24%;
+                    padding-left: 24%;
+                }
+            }
+            @media (max-width: 1300px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 22.5%;
+                    padding-left: 22.5%;
+                }
+            }
+            @media (max-width: 1260px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 21.5%;
+                    padding-left: 21.5%;
+                }
+            }
+            @media (max-width: 1200px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 19%;
+                    padding-left: 19%;
+                }
+            }
+            @media (max-width: 1100px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 18%;
+                    padding-left: 18%;
+                }
+            }
+            @media (max-width: 1060px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 15%;
+                    padding-left: 15%;
+                }
+            }
+            @media (max-width: 1000px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 14%;
+                    padding-left: 14%;
+                }
+            }
+            @media (max-width: 900px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 13%;
+                    padding-left: 13%;
+                }
+            }
+            @media (max-width: 800px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 12%;
+                    padding-left: 12%;
+                }
+            }    
+            @media (max-width: 700px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 10%;
+                    padding-left: 10%;
+                }
+            }		
+            @media (max-width: 600px) {			
+                #down {
+                    padding-top: 10px;
+                    padding-right: 9%;
+                    padding-left: 9%;
+                }
+            }
+            @media (max-width: 500px) {     
+                #down {
+                    padding-top: 10px;
+                    padding-right: 8%;
+                    padding-left: 8%;
+                }
+            }
+            @media (max-width: 400px) {     
+                #down {
+                    padding-top: 10px;
+                    padding-right: 5%;
+                    padding-left: 5%;
+                }
+            }
         #map_canvas { margin:0px auto; width:700px; height:500px; }     
 		@media (max-width: 900px) {			
 			#map_canvas {
@@ -75,37 +172,12 @@
 				width: 400px;
 			}
 		}
-    @media (max-width: 400px) {     
-      #map_canvas {
-        height: 300px;
-        width: 300px;
-      }
-        #map_canvas  margin:0px auto; width:700px; height:500px;     
-            @media (max-width: 900px) {			
-                #table_class {
-                    width: 600px;
-                }
-            }
-            @media (max-width: 700px) {			
-                #table_class {
-                    width: 400px;
-                }
-            }		
-            @media (max-width: 600px) {			
-                #table_class {
-                    width: 450px;
-                }
-            }
-            @media (max-width: 500px) {     
-                #table_class {
-                    width: 400px;
-                }
-            }
-            @media (max-width: 400px) {     
-                #table_class {
-                    width: 350px;
-                }
-            }
+        @media (max-width: 400px) {     
+          #map_canvas {
+            height: 300px;
+            width: 300px;
+          }
+        
     </style>
 	<script src="js/road.js"></script>
   </head>
@@ -145,8 +217,8 @@
     </div>
 <div id="map_canvas"></div>
 
-<div class="container" id="down">	
-     <div class="panel panel-default">
+<div id="down">	
+     <div class="panel panel-default" id="table_class">
        <div class="panel-heading"><h4><strong id="theTitlein">Loading...</strong></h4></div>
         <div class="panel-body table-responsive">
             <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#directions_panel" aria-expanded="true" aria-controls="directions_panel">
@@ -156,26 +228,23 @@
 
             <div class="btn-group btn-group-justified" role="group" aria-label="...">
               <div class="btn-group" role="group" id="add_a">
-                  <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#share" aria-expanded="true" aria-controls="share"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>分享</button>
-              </div>
-			  <div class="btn-group" role="group" id="add_a">
-                  <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#thestar" aria-expanded="true" aria-controls="thestar"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>評分</button>
+                  <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#share" aria-expanded="true" aria-controls="share"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>分享&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-star" aria-hidden="true"></span>評分</button>
               </div>
               <div class="btn-group" role="group" id="add_a">
                   <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#add_article" aria-expanded="true" aria-controls="add_article"><span class="glyphicon glyphicon-plus"></span>新增評論</button>
               </div>
             </div>
                 <div class="panel-body accordion-body collapse"  id="share">
-                    <ul>    
-                        <li>分享至...</li>
-                        <a href="javascript: void(window.open('https://www.facebook.com/share.php?u='.concat(encodeURIComponent(location.href)) ));"><img title="分享到臉書！" src="images/share_icon/facebook.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://www.plurk.com/?qualifier=shares&status=' .concat(encodeURIComponent(location.href)) .concat(' ') .concat('&#40;') .concat(encodeURIComponent(document.title)) .concat('&#41;')));"><img title="分享到噗浪！" src="images/share_icon/plurk.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://twitter.com/home/?status='.concat(encodeURIComponent(document.title)) .concat(' ') .concat(encodeURIComponent(location.href))));"><img title="分享到推特！" src="images/share_icon/twitter.png" border="0" width="48" /></a><a href="javascript:(function(){window.open('https://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent(document.title)+'&url='+encodeURIComponent(location.href)+'&source=bookmark','_blank','width=450,height=400');})()"><img title="分享到微博！" src="images/share_icon/weibo.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://plus.google.com/share?url='.concat(encodeURIComponent(location.href)), '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'));"><img title="分享到Google+！" src="images/share_icon/google_plus.png" border="0" width="48" ></a>
-					</ul>
-                </div>
-             <div class="panel-body accordion-body collapse"  id="thestar"> 
-						<div id="star"></div> 
-						<div id="result"></div>
-						<p id="nowRank">0</p>
-						<p id="youRank"></p>
+                    <table class="rwd-table">    
+                        <tr>
+                            <td>分享至...</td>
+                            <td><a href="javascript: void(window.open('https://www.facebook.com/share.php?u='.concat(encodeURIComponent(location.href)) ));"><img title="分享到臉書！" src="images/share_icon/facebook.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://www.plurk.com/?qualifier=shares&status=' .concat(encodeURIComponent(location.href)) .concat(' ') .concat('&#40;') .concat(encodeURIComponent(document.title)) .concat('&#41;')));"><img title="分享到噗浪！" src="images/share_icon/plurk.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://twitter.com/home/?status='.concat(encodeURIComponent(document.title)) .concat(' ') .concat(encodeURIComponent(location.href))));"><img title="分享到推特！" src="images/share_icon/twitter.png" border="0" width="48" /></a><a href="javascript:(function(){window.open('https://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent(document.title)+'&url='+encodeURIComponent(location.href)+'&source=bookmark','_blank','width=450,height=400');})()"><img title="分享到微博！" src="images/share_icon/weibo.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://plus.google.com/share?url='.concat(encodeURIComponent(location.href)), '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'));"><img title="分享到Google+！" src="images/share_icon/google_plus.png" border="0" width="48" ></a><a href="http://line.naver.jp/R/msg/text/?LINE%E3%81%A7%E9%80%81%E3%82%8B%0D%0Ahttp%3A%2F%2Fline.naver.jp%2F"><img src="images/share_icon/line.png"border="0" width="48" alt="分享到LINE！" /></a></td>
+                        </tr>
+                        <tr>
+                            <td><p id="star"></p><p id="result"></p></td>
+                            <td><p id="youRank"></p><p id="nowRank">0</p></td>
+                        </tr>
+                    </table>
                 </div>
             <div class="panel-body accordion-body collapse" id="add_article">
                 <ul>    
@@ -196,8 +265,9 @@
 		</div>
 	</div>
 </div> 
-            <div class="card-container" id="cards">          </div>
-
+      <div class="container">
+          <div class="card-container" id="cards"></div>
+      </div>
 
  <!-- /container -->
 
